[package]
name = "utilities"
version = "0.1.0"
authors = ["Qi Tian <mrwwheat@gmail.com>"]
edition = "2018"
description = "Utilities funtions for datenlord"
repository = "https://github.com/datenlord/utilities"
readme = "README.md"
license = "MIT"
keywords = ["utilities"]
categories = ["utilities"]

[dependencies]
env_logger = "0.6.0"
libc = "0.2"
log = "0.4.6"
nix = "0.17.0"

[features]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
