[package]
name = "clippy-utilities"
version = "0.1.0"
authors = ["DatenLord Developers <dev@datenlord.io>"]
edition = "2018"
description = "Utilities funtions for clippy fixing" 
repository = "https://github.com/datenlord/utilities"
readme = "README.md"
license = "MIT"
keywords = ["utilities"]
categories = ["utilities"]
